# elicitation-example

./: README.md  client.py  mcp_server.py  pyproject.toml
