[project]
name = "elicitation-example"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "loguru>=0.7.3",
    "mcp[cli]>=1.12.3",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
